--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,27 @@
 name: Build
 
-on: [push]
+on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Run unit tests
-      run: ./run_unit_tests.sh
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+      - name: Run unit tests
+        run: ./run_unit_tests.sh
+      - name: Build packages
+        run: python -m build
+      - name: Attach packages
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist/
