--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          pip install pylint build
+      - name: Run linter
+        run: pylint -E tn3270
       - name: Run unit tests
         run: ./run_unit_tests.sh
       - name: Build packages
