--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint build
+          pip install -r requirements.txt
 
       - name: Run linter
         run: pylint -E tn3270
